...
    
    val state by loginViewModel.uiState.collectAsState()

    var icono = if(!state.mostrarContrasena) R.drawable.hide else R.drawable.see

    Box(
        modifier = modifier.testTag("loginScreen")
    ){

        BackgroundImage()
        Column(
            verticalArrangement = Arrangement.Center,
            horizontalAlignment = Alignment.CenterHorizontally,
...
