...
        MensajeBienvenida(
            stringResource(R.string.app_name),
            modifier = Modifier.padding(16.dp)
        )
        AppButton(
            stringResource(R.string.iniciar_sesion),
            modifier = Modifier.padding(bottom = 4.dp).testTag("btnLogin"),
            onClick = loginButtonPressed

        )
        AppButton(
            stringResource(R.string.crear_cuenta),
            modifier = Modifier.padding(bottom = 16.dp).testTag("btnRegister"),
...
