...
fun HomeScreen(
    homeViewModel: HomeViewModel,
    navigateCreateTweet: () -> Unit,
    onTweetProfileImageClicked: (String) -> Unit,
    onTweetClicked: (String) -> Unit,
    onTweetReplyClicked: (String) -> Unit,
    modifier: Modifier = Modifier.testTag("homeScreen")
){

    val state by homeViewModel.uiState.collectAsState()

    LaunchedEffect(Unit) {
        homeViewModel.getAllTweets()
...
