...
                },
                label = { Text(text = "Nombre") },
                modifier = Modifier
                    .padding(top = 32.dp)
                    .fillMaxWidth()
                    .padding(10.dp)
                    .testTag("nameField")
            )
            OutlinedTextField(
                value = state.bio,
                onValueChange = {
                    updateProfileViewModel.updateBio(it)
                },
...
                modifier = Modifier.fillMaxWidth().padding(10.dp)
            )
            Button(
                onClick = {
                    updateProfileViewModel.updateProfile()
                },
                modifier = Modifier.padding(16.dp).fillMaxWidth().testTag("btnUpdateProfile")
            ) {
                Text("Guardar cambios")
            }
            
        }
        val lancherProfileImage = selectImage {
...
